# routes/api.php
@@ -1,5 +1,6 @@
 <?php
 
+use App\Http\Controllers\API\v1\CandidateController;
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
 
@@ -14,6 +15,16 @@ use Illuminate\Support\Facades\Route;
 |
 */
 
-Route::middleware('auth:sanctum')->get('/user', function (Request $request) {
-    return $request->user();
+// Route::middleware('auth:sanctum')->get('/user', function (Request $request) {
+//     return $request->user();
+// });
+
+Route::group(['middleware' => ['cors']], function () {
+    Route::prefix('candidate')->group(function () {
+        Route::post('/', [CandidateController::class, 'StoreCandidate']);
+        Route::put('/', [CandidateController::class, 'UpdateCandidate']);
+        Route::delete('/{candidateId}', [CandidateController::class, 'DeleteCandidate']);
+        Route::get('/{candidateId}', [CandidateController::class, 'GetCandidate']);
+        Route::get('/', [CandidateController::class, 'GetDataTableCandidate']);
+    });
 });
